--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2694,107 +2694,107 @@ stories:
   domain: http://www.loudountimes.com/
   link: https://www.loudountimes.com/online_features/senior_living/refresh-your-summer-with-delicious-healthy-mocktails/image_d6731f5f-edf5-5c36-81fc-cdc4959d948f.html
 images:
-- name: aws-s3-stories-oldgaspumps-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-oldgaspumps-umberto-bocc.jpg
-- name: mediterranean-mediterranean-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smooth-ride.jpg
-- name: wind-mills-windmills-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-bright-sand.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-bright-sand.jpg
-- name: old-school-house-old-schoolhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-rainbow-festival.jpg
-- name: yosemite-yosemite-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-electricity.jpg
-- name: oldcabin-oldcabin-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-nazi-poster.jpg
-- name: subway-subway-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colored-circuits.jpg
-- name: mediterranean-mediterranean-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-granite.jpg
-- name: blossombar-purp-paper-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purp-paper-file-00-00-24-99.jpg
-- name: flower-barbed-wire-flower-barbed-wire-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-constitution.jpg
-- name: bordercrossing-bordercrossing-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
-- name: trucksilo-trucksilo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
-- name: berlinwall2-berlinwall-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-light-dali.jpg
-- name: oldbarn-oldbarn-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-creativity.jpg
-- name: curtain-curtain-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-matrix.jpg
-- name: oldhouse-granaryfield-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-internet-numbers.jpg
-- name: downtown-los-angeles-downtown-la-marcel-duchamp.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-marcel-duchamp.JPG
-- name: white-house-whitehouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-colorful-blocks.jpg
-- name: aws-s3-square-C2plAIxWIAAOSdD-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2plAIxWIAAOSdD-square.jpg
-- name: old-door-lock-old-door-lock-2-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-aqua.jpg
-- name: server-cloud1-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-free-woman.jpg
-- name: powerlines-power-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-rain.jpg
-- name: paris-paris-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-yellow-paper.jpg
-- name: oldhotel-oldhotel-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-creativity.jpg
-- name: curtain-curtain-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-soul.jpg
-- name: amusement-park-amusement-park-2-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-space-pizza.jpg
-- name: carry-load-carryload-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colored-circuits.jpg
-- name: razorwire-DSC-0080-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-matrix.jpg
-- name: powerlines-power-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colorful-blocks.jpg
-- name: crow-crow-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-alien-goggles.jpg
-- name: liberty-back-statue-liberty-back-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-collage.jpg
-- name: status-berlin-status-berlin-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-purple-pond.jpg
-- name: paris-paris-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gred-mash.jpg
-- name: old-door-lock-old-door-lock-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-alien-goggles.jpg
-- name: beach-rocks-beach-rocks-currents-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sunday.jpg
-- name: border-crossing-bordercrossing-smooth-ride.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-smooth-ride.png
-- name: san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-- name: razorwire-DSC-0080-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-smoking-cigarette.jpg
-- name: machine-road-machine-road-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-attack-planes.jpg
-- name: old-granary-field-oldhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-post-modern.jpg
-- name: carry-load-carryload-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-internet-numbers.jpg
-- name: aws-s3-blossombar-blossombar-still-600.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-600.png
-- name: aws-s3-stories-servers-hallway-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-servers-hallway-door.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-- name: old-school-house-old-schoolhouse-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit-5.jpg
-- name: oldcabin-store-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-aqua.jpg
-- name: walled-garden-walled-garden-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-plentiful.jpg
-- name: fence-fence-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-nazi-poster.jpg
-- name: abandonedbuildings_rainbow_festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_rainbow_festival.jpg
+- name: death-valley-death-valley-national-park-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-smoking-cigarette.jpg
+- name: locked-up-steam-lock-up-steam-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-copper-circuit.jpg
+- name: store-on-corner-oldcabin-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-kand-two.jpg
+- name: old-house-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-deep-connections.jpg
+- name: yosemite-yosemite-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-granite.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
+- name: aws-s3-stories-beach-rocks-currents-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-blue-circuit-4.jpg
+- name: hollywood-building-hollywood-building-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-plentiful.jpg
+- name: blossombar-yellow-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-paper-file-00-00-50-62.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-gred-mash.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-gred-mash.JPG
+- name: beach-clouds-lifeguard-beachclouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-smoking-cigarette.jpg
+- name: fence-mexico-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smooth-ride.jpg
+- name: art-museum-art-museum-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colored-circuits.jpg
+- name: powerlines-power-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-wols.jpg
+- name: fence-mexico-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colored-circuits.jpg
+- name: cargo-ship-cargo-ship-on-sea-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purple-storm.jpg
+- name: oldroad-old-road-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-kand-two.jpg
+- name: supreme-court-supremecourt-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-graham-sutherland.jpg
+- name: berlinwall-DSC-0084-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-creativity.jpg
+- name: window-window-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crabapple.jpg
+- name: trucksilo-trucksilo-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dali-two.jpg
+- name: gypsymosaic-gypsy-eyes-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crunch-paper.jpg
+- name: oldroad-old-road-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-paper.jpg
+- name: miamibeach-miamibeach-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-aqua.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-aqua.jpg
+- name: berlinwall-DSC-0084-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crafty-painting.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+- name: subway-subway-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
+- name: carry-load-carryload-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sunday.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crunch-paper.jpg
+- name: border-crossing-bordercrossing-dry-skin.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dry-skin.png
+- name: containership-containership-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smoking-cigarette.jpg
+- name: dragon-desert-desert-dragon-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-china-prop.jpg
+- name: old-granary-field-oldhouse-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-bright-sand.jpg
+- name: aws-s3-stories-35910978054-906047b6cb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-35910978054-906047b6cb-z.jpg
+- name: oldtrain-oldtrain-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-brush.jpg
+- name: oldhotel-oldhotel-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-atari-missle.jpg
+- name: white-house-lawn-white-house-lawn-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-wols.jpg
+- name: white-house-lawn-white-house-window-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-alberto-giacometti.jpg
+- name: oldbarn-oldbarn-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-nazi-poster.jpg
+- name: mediterranean-mediterranean-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-three.jpg
+- name: ellis-island-ellis-island-room-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-soul.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
+- name: curtain-curtain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
+- name: old-barn-old-barn-1500-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-plentiful.jpg
+- name: server-cloud-server-racks-door-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-paper.jpg
+- name: powerlines-power-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-space-pizza.jpg
+- name: locked-up-steam-lock-up-steam-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-granite.jpg
+- name: containership-containership-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-colored-circuits.jpg
+- name: abandonedbuildings_dry_skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dry_skin.jpg
+- name: nyc-flag-nycflag-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-alien-goggles.jpg
 ---
 Early Morning Fire Heavily Damages Hoffman Estates Home.&nbsp;Video Shows Border Patrol Agents Reviving Migrant Teen.&nbsp;Thievery Corporation To Bring A World Of Sound To Orlando Come November.&nbsp;The Basics Of A Healthy Diet.&nbsp;US, Taliban Open Doha Talks In Fresh Bid To End War.&nbsp;Tens Of Thousands Join Gay Pride Parades Around The World.&nbsp;Trailer Mishap Gums Up Menemsha.&nbsp;Accidents Recorded In Waushara County.&nbsp;
